--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Exercices Javascripts</title>
 </head>
-<body>
+<body id="body">
     <h1>Exercices Javascript</h1>
-    <h2>Exercice 1 : Réaliser des scripts simples avec JavaScript. [facile]</h2>
-    <ol>
-        <li>Ecrire une page HTML contenant un script permettant d’afficher « Bonjour tout le monde »</li>
-        <li>Améliorer le script pour qu’il permette de demander le prénom de l’utilisateur (méthode prompt()) et afficher « Bonjour ‘votre prénom’».</li>
-    </ol>
-    <h2>Exercice 2 : Somme de deux nombres. [facile]</h2>
-    <p>Utiliser les méthodes JavaScript prompt() et alert() pour demander à l’utilisateur deux nombres puis afficher leur somme.</p>
-    <h2>Exercice 3 : Réaliser des conditions (if/else). [moyen]</h2>
-    <p>Ecrire un script demandant à l’utilisateur d’entrer son âge et de contrôler la validité de l’âge entré (si l’âge est erroné afficher un message d’erreur et redemander de saisir l’âge).</p>
+    <a class="btn btn-primary m-5" id="btn">Colorr!!!</a>
     <script src="js/main.js"></script>
 </body>
 </html>
