--- a/exercices-1-6/index.html
+++ b/exercices-1-6/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Exercices Javascripts</title>
 </head>
-<body>
-    <h1>Accueil des exercices JS</h1>
-    <ul>
-        <li><a href="exercices-1-6/index.html">Exercices Partie 1</a></li>
-        <li><a href="">Exercices Partie 2</a></li>
-    </ul>
+<body id="body">
+    <h1>Exercices Javascript</h1>
+    <a class="btn btn-primary m-5" id="btn">Colorr!!!</a>
+    <script src="js/main.js"></script>
 </body>
 </html>
