--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Accueil des exercices JS</h1>
     <ul>
         <li><a href="exercices-1-6/index.html">Exercices Partie 1</a></li>
-        <li><a href="">Exercices Partie 2</a></li>
+        <li><a href="exercices-2/index.html">Exercices Partie 2</a></li>
     </ul>
 </body>
 </html>
