--- a/exercices-2/index.html
+++ b/exercices-2/index.html
@@ -28,7 +28,7 @@
                 <legend class="w-auto">S'amuser avec l'image</legend>
                 <label for="" class="w-100">Margin</label>
             <output class="btn btn-secondary">0</output><span class="m-2">px</span>
-            <input id="margin" class="form-control-range" type="range" min="10" max="500" oninput="changeStyle('margin', this)">
+            <input id="margin" class="form-control-range" type="range" min="10" max="500" oninput="changeStyle('margin', this.value)">
             <label for="" class="w-100">height</label>
             <output class="btn btn-secondary">auto</output><span class="m-2">vh</span>
             <input id="height" class="form-control-range" type="range" min="10" max="100"  oninput="changeStyle('height', this.value)">
