--- a/exercices-2/index.html
+++ b/exercices-2/index.html
@@ -88,8 +88,18 @@
                 <input type="text" name="" id="regexNum">
                 <h4 id="regexResult3"></h4>
               </fieldset>
-          </form>
-      </div>
+        </form>
+
+          
+            <a href="javascript:void(0)" id="addName" class="btn btn-primary m-5">Ajouter un nom</a>
+            <a href="javascript:void(0)" id="getWinner" class="btn btn-primary m-5">Choisir le gagnant</a>
+        <form action="">
+            <input type="text" name="" id="multiplication" oninput="getMultiplication(this.value)">
+        </form>
+    </div>
+                    <div id="multiplicationResult">
+                    
+                    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
