--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Accueil des exercices JS</h1>
     <ul>
-        <li><a href="exercices-1-6/index.html">Exercices Partie 1</a></li>
+        <li><a href="exercices-1/index.html">Exercices Partie 1</a></li>
         <li><a href="exercices-2/index.html">Exercices Partie 2</a></li>
+        <li><a href="exercices-3/index.html">Exercices Partie 3</a></li>
     </ul>
 </body>
 </html>
