--- a/exercices-3/index.html
+++ b/exercices-3/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p id="test">test</p>
     <h1>Exercices Javascript Partie 3</h1>
     <form action="" class="text-center">
         <fieldset class="border p-2">
@@ -40,6 +41,8 @@
             <h4 id="longestResult"></h4>
         </fieldset>
     </form>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
     <script src="js/main.js"></script>
 </body>
 </html>
