--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="exercices-1/index.html">Exercices Partie 1</a></li>
         <li><a href="exercices-2/index.html">Exercices Partie 2</a></li>
         <li><a href="exercices-3/index.html">Exercices Partie 3</a></li>
+        <li><a href="exercices-jquery-1/index.html">Exercices JQuery Partie 1</a></li>
     </ul>
 </body>
 </html>
