Add JQuery Exercices Part II

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="exercices-2/index.html">Exercices Partie 2</a></li>
         <li><a href="exercices-3/index.html">Exercices Partie 3</a></li>
         <li><a href="exercices-jquery-1/index.html">Exercices JQuery Partie 1</a></li>
+        <li><a href="exercices-jquery-2/index.html">Exercices JQuery Partie 2</a></li>
     </ul>
 </body>
 </html>
